...
                    android:layout_marginTop="16dp"
                    android:text="Steps"
                    android:textColor="@color/colorTextHeader"
                    android:textSize="24sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recipe_steps_RV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    >
...
